2009-09-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/nt_base.c (NTGhostscriptFind): Improve logging messages
	when searching for Ghostscript.

2009-09-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c (CacheInfo): Add read_only member to
	indicate if cache is allowed to be modified.
	(ModifyCache): Clone cache if origin cache is read only.
	(PersistCache): Persistent caches which are attached are treated
	as read-only.  This avoids crash with MPC images which are read
	and subsequently modified.
	Reverted pixel cache locking changes which were made yesterday
	since I decided that they were too risky until file handle
	management is addressed.

2009-09-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/resource.c (InitializeMagickResources): Increase
	operating system file handle limits if necessary.

	* magick/pixel_cache.c: Pixel cache file locking is now done at
	point of access.

	* magick/nt_base.c (NTGhostscriptFind): New function to find
	Ghostscript under Windows, replacing previous Ghostgum
	implementation.

	* Copyright.txt: License is now based on MIT license exactly,
	without extra edits.  Ghostgum code has been eliminated so it is
	no longer necessary to include its license.

2009-09-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/delegate.c (GetPostscriptDelegateInfo): Add a gs-palette
	delegate entry in order to force Ghostscript to output a
	colormapped image if '-type palette' is specified prior to the
	input filename.  Ghostscript's dithering is much courser than
	GraphicsMagick's -colors default (more similar to
	-ordered-dither), but it is fast and produces smaller intermediate
	files.

	* coders/ps.c (ReadPSImage): Eliminate use of NULL pointer when
	progress monitor is enabled.  Was referring to image->filename
	rather than image_info->filename as it should have.

	* magick/delegate.c (InvokePostscriptDelegate): Added an