@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020090910"
+#define public MagickPackageVersionAddendum ".020090911"
 #define public MagickPackageReleaseDate "unreleased"
