@@ -10,8 +10,8 @@
 
 set -e # Exit on any error
 . ${srcdir}/utilities/tests/common.sh
-
+set -x
 OUTFILE=TileThresholdBlack_out.miff
 rm -f ${OUTFILE}
 ${GM} convert ${CONVERT_FLAGS} ${MODEL_MIFF} -black-threshold "20%" \
-                   -label "Black Threshold" ${OUTFILE}
+                   -label 'Black-Threshold' ${OUTFILE}
