@@ -21,6 +21,15 @@
 </tr>
 </table>
 <p>
+2009-09-11  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> utilities/tests/{black-threshold.sh,draw.sh,recolor.sh,
+        white-threshold.sh}: MSYS is sometimes wreaking havoc on arguments
+        with spaces in them so use work-arounds.
+
+</UL>
+<p>
 2009-09-10  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
